crates/math-core/tests/snapshots/custom_cmd_test__newcommand_nested_cmd_in_body.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\br}[1]{[#1]}\\newcommand{\\dbr}[1]{\\br{\\br{#1}}}\\dbr{z}"
---
<math>
    <mo stretchy="false">[</mo>
    <mo stretchy="false">[</mo>
    <mi>z</mi>
    <mo stretchy="false">]</mo>
    <mo stretchy="false">]</mo>
</math>
