crates/math-core/tests/snapshots/custom_cmd_test__newcommand_predefined_cmd_in_body.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\imp}{\\implies}a \\imp b"
---
<math>
    <mi>a</mi>
    <mspace width="0.2777778em"/>
    <mo stretchy="false">⟹</mo>
    <mspace width="0.2777778em"/>
    <mi>b</mi>
</math>
