crates/math-core/tests/snapshots/custom_cmd_test__newcommand_spacing.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\eq}{=}x + \\eq 3"
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo>=</mo>
    <mn>3</mn>
</math>
