crates/math-core/tests/snapshots/custom_cmd_test__newcommand_unbraced_name.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand\\half{\\frac{1}{2}}\\half"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
