crates/math-core/tests/snapshots/custom_cmd_test__newcommand_uses_config_macro.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\halves}[1]{#1\\half}\\halves{3}"
---
<math>
    <mn>3</mn>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
