crates/math-core/tests/snapshots/custom_cmd_test__newcommand_without_global_group.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\bb}[1]{\\mathbb{#1}}\\bb{R}"
---
<math>
    <mi>ℝ</mi>
</math>
