crates/math-core/tests/snapshots/custom_cmd_test__providecommand_existing_builtin.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\providecommand{\\frac}[2]{#1/#2}\\frac{1}{2}"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
