crates/math-core/tests/snapshots/custom_cmd_test__providecommand_existing_config_macro.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\providecommand{\\half}{\\frac{1}{3}}\\half"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
